--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   	 	  	  	  	   	  $59/Month
   	 	  	  	  	   </div>
   	 	  	  	  	   <div class="img">
-  	 	  	  	  	   	 <img src="images/price1.jpg" alt="price" />
+  	 	  	  	  	   	 <img src="images/price1new.jpg" alt="price" />
   	 	  	  	  	   </div>
   	 	  	  	  	   <div class="text">
   	 	  	  	  	   	  <h3>Body Building Training</h3>
