--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   	  <!-- go down -->
   	      <a href="#about" class="go-down">
   	      	  <i class="fa fa-angle-down" aria-hidden="true"></i>
+		      I want IIT-R Discount
   	      </a>
   	  <!-- go down -->
 
