--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
   	 	  	  	  	   <div class="text">
   	 	  	  	  	   	  <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
   	 	  	  	  	   </div>
+					  <div class="head">
+ 		 	  	    		<h4>Cardiovascular Equipment</h4>
+ 		 	  	    		<span class="fa fa-angle-down"></span>
+ 		 	  	    	</div>
+ 		 	  	    	<div class="body">
+ 		 	  	    		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+ 		 	  	    	</div>
   	 	  	  	  </div>
   	 	  	  </div>
   	 	  	  <div class="box wow bounceInUp" data-wow-delay="0.2s">
