--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   	 	  	  	  	   	 <img src="images/price1new.jpg" alt="price" />
   	 	  	  	  	   </div>
 					  <div class="accordian box wow slideInRight">
- 		 	  	    <div class="accordian-container active">
+ 		 	  	    <div class="accordian-container">
  		 	  	    	<div class="head">
  		 	  	    		<h4>Cardiovascular Equipment</h4>
  		 	  	    		<span class="fa fa-angle-down"></span>
