--- a/index.html
+++ b/index.html
@@ -106,45 +106,51 @@
 
 	
  <!-- Start About -->
-  <section class="about" id="about">
-  	  <div class="container">
-  	  	  <div class="content">
-  	  	  	   <div class="box wow bounceInUp">
-  	  	  	   	   <div class="inner">
-  	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about1.jpg" alt="about" />
-  	  	  	   	   	   </div>
-                       <div class="text">
-                       	   <h4>Free Consultation</h4>
-                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                       </div>
-  	  	  	   	   </div>
-  	  	  	   </div>
-  	  	  	   	<div class="box wow bounceInUp" data-wow-delay="0.2s">
-  	  	  	   	   <div class="inner">
-  	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about2.jpg" alt="about" />
-  	  	  	   	   	   </div>
-                       <div class="text">
-                       	   <h4>Best Training</h4>
-                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                       </div>
-  	  	  	   	   </div>
-  	  	  	   </div>
-  	  	  	   <div class="box wow bounceInUp" data-wow-delay="0.4s">
-  	  	  	   	   <div class="inner">
-  	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about3.jpg" alt="about" />
-  	  	  	   	   	   </div>
-                       <div class="text">
-                       	   <h4>Build Perfect Body</h4>
-                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                       </div>
-  	  	  	   	   </div>
-  	  	  	   </div>
-  	  	  </div>
-  	  </div>
-  </section>
+ <section class="price-package" id="price">
+    <div class="container">
+          <h2>Choose Your Goal</h2>
+          <div class="content">
+                <div class="box wow bounceInUp">
+                      <div class="inner">
+                             <div class="img">
+                                  <img src="images/price1new.jpg" alt="price" />
+                             </div>
+                      <div class="accordian box wow slideInRight">
+                         <div class="accordian-container">
+                           <div class="head">
+                             <h4>Cardiovascular Equipment</h4>
+                             <span class="fa fa-angle-down"></span>
+                         </div>
+                                <div class="text">
+                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                             </div>
+                     </div>
+                </div>
+         </div>
+    </div>
+                <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                      <div class="inner">
+                             <div class="img">
+                                  <img src="images/price2.jpg" alt="price" />
+                             </div>
+                             <div class="text">
+                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                             </div>
+                      </div>
+                </div>
+                <div class="box wow bounceInUp" data-wow-delay="0.4s">
+                      <div class="inner">
+                             <div class="img">
+                                  <img src="images/price3.jpg" alt="price" />
+                             </div>
+                             <div class="text">
+                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                             </div>
+                      </div>
+                </div>
+          </div>
+    </div>
+</section>
  <!-- End About -->
 
 
