--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  	 	<div class="nav">
  	 		<ul>
  	 			<li><a href="#home">Home</a></li>
- 	 			<li><a href="#about">About</a></li>
+ 	 			<li><a href="#IIT-R">IIT-R</a></li>
  	 			<li><a href="#service">Services</a></li>
  	 			<li><a href="#classes">Classes</a></li>
  	 			<li><a href="#schedule">Schedule</a></li>
@@ -105,53 +105,52 @@
  <!-- End Price -->
 
 	
- <!-- Start About -->
- <section class="price-package" id="price">
-    <div class="container">
-          <h2>Choose Your Goal</h2>
-          <div class="content">
-                <div class="box wow bounceInUp">
-                      <div class="inner">
-                             <div class="img">
-                                  <img src="images/price1new.jpg" alt="price" />
-                             </div>
-                      <div class="accordian box wow slideInRight">
-                         <div class="accordian-container">
-                           <div class="head">
-                             <h4>Cardiovascular Equipment</h4>
-                             <span class="fa fa-angle-down"></span>
-                         </div>
-                                <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
-                     </div>
-                </div>
-         </div>
-    </div>
-                <div class="box wow bounceInUp" data-wow-delay="0.2s">
-                      <div class="inner">
-                             <div class="img">
-                                  <img src="images/price2.jpg" alt="price" />
-                             </div>
-                             <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
-                      </div>
-                </div>
-                <div class="box wow bounceInUp" data-wow-delay="0.4s">
-                      <div class="inner">
-                             <div class="img">
-                                  <img src="images/price3.jpg" alt="price" />
-                             </div>
-                             <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
-                      </div>
-                </div>
-          </div>
-    </div>
-</section>
- <!-- End About -->
+ <!-- Start About/ IITR -->
+   <section class="price-package" id="price">
+  	 <div class="container">
+  	 	  <h2>Choose Your Goal</h2>
+  	 	  <div class="content">
+  	 	  	  <div class="box wow bounceInUp">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="img">
+  	 	  	  	  	   	 <img src="images/price1new.jpg" alt="price" />
+  	 	  	  	  	   </div>
+					  <div class="accordian box wow slideInRight">
+ 		 	  	    <div class="accordian-container">
+ 		 	  	    	<div class="head">
+ 		 	  	    		<h4>Cardiovascular Equipment</h4>
+ 		 	  	    		<span class="fa fa-angle-down"></span>
+ 		 	  	    	</div>
+ 		 	  	     <div class="text">
+  	 	  	  	  	   	  <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+  	 	  	  	  	   </div>
+ 		 	  	    </div>
+  	 	  	  </div>
+		</div>
+  	 	  	  <div class="box wow bounceInUp" data-wow-delay="0.2s">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="img">
+  	 	  	  	  	   	 <img src="images/price2.jpg" alt="price" />
+  	 	  	  	  	   </div>
+  	 	  	  	  	   <div class="text">
+  	 	  	  	  	   	  <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+  	 	  	  	  	   </div>
+  	 	  	  	  </div>
+  	 	  	  </div>
+  	 	  	  <div class="box wow bounceInUp" data-wow-delay="0.4s">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="img">
+  	 	  	  	  	   	 <img src="images/price3.jpg" alt="price" />
+  	 	  	  	  	   </div>
+  	 	  	  	  	   <div class="text">
+  	 	  	  	  	   	  <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+  	 	  	  	  	   </div>
+  	 	  	  	  </div>
+  	 	  	  </div>
+  	 	  </div>
+  	 </div>
+  </section>
+ <!-- End About IITR -->
 
 
  <!-- Start Service -->
