--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  	 	<div class="nav">
  	 		<ul>
  	 			<li><a href="#home">Home</a></li>
- 	 			<li><a href="#IIT-R">IIT-R</a></li>
+ 	 			<li><a href="#about">IIT-R</a></li>
  	 			<li><a href="#service">Services</a></li>
  	 			<li><a href="#classes">Classes</a></li>
  	 			<li><a href="#schedule">Schedule</a></li>
@@ -58,7 +58,7 @@
 
 
 	 <!-- Start Price -->
-  <section class="price-package" id="price">
+    <section class="price-package" id="price">
   	 <div class="container">
   	 	  <h2>Choose Your Goal</h2>
   	 	  <div class="content">
