--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 	
  <!-- Start About/ IITR -->
-   <section class="price-package" id="price">
+   <section class="price-package" id="about">
   	 <div class="container">
   	 	  <h2>Choose Your Goal</h2>
   	 	  <div class="content">
