--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
 	
  <!-- Start About/ IITR -->
-   <section class="price-package" id="about">
-  	<div class="container">
+  <section class="price-package" id="price">
+    <div class="container">
           <h2>Choose Your Goal</h2>
           <div class="content">
                 <div class="box wow bounceInUp">
