--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 	
  <!-- Start About/ IITR -->
-  <section class="price-package" id="price">
+  <section class="price-package" id="about">
     <div class="container">
           <h2>Choose Your Goal</h2>
           <div class="content">
@@ -114,15 +114,9 @@
                              <div class="img">
                                   <img src="images/price1new.jpg" alt="price" />
                              </div>
-                      <div class="accordian box wow slideInRight">
-                         <div class="accordian-container">
-                           <div class="head">
-                             <h4>Cardiovascular Equipment</h4>
-                             <span class="fa fa-angle-down"></span>
-                         </div>
-                                <div class="text">
+			      <div class="text">
                                    <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
+                        	 </div>
                      </div>
                 </div>
          </div>
