--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                   <img src="images/price1new.jpg" alt="price" />
                              </div>
                                 <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="https://github.com/MadhavKcTripathi/GymWebsite/blob/main/fatTofit.html" class="btn">View Pricing</a>
                              </div>
                      </div>
         
