--- a/fatTofit.html
+++ b/fatTofit.html
@@ -20,10 +20,6 @@
  	 	<div class="logo">
  	 		 <a href="">Fitness <span>Club</span></a>
  	 	</div>
- 	 	<a href="javascript:void(0)" class="ham-burger">
- 	       <span></span>	
- 	       <span></span>
- 	 	</a>
  	 </div>
  </header>
  <!-- End Header  -->
@@ -39,30 +35,9 @@
                                   <img src="images/price1new.jpg" alt="price" />
                              </div>
                                 <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">Register Now</a>
                              </div>
                      </div>
-        
-         </div>
-                <div class="box wow bounceInUp" data-wow-delay="0.2s">
-                      <div class="inner">
-                             <div class="img">
-                                  <img src="images/price2.jpg" alt="price" />
-                             </div>
-                             <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
-                      </div>
-                </div>
-                <div class="box wow bounceInUp" data-wow-delay="0.4s">
-                      <div class="inner">
-                             <div class="img">
-                                  <img src="images/price3.jpg" alt="price" />
-                             </div>
-                             <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
-                             </div>
-                      </div>
                 </div>
           </div>
     </div>
