--- a/fatTofit.html
+++ b/fatTofit.html
@@ -15,10 +15,25 @@
 <body>
  
  <!-- Start Header  -->
- <header>
+<header>
  	 <div class="container">
  	 	<div class="logo">
  	 		 <a href="">Fitness <span>Club</span></a>
+ 	 	</div>
+ 	 	<a href="javascript:void(0)" class="ham-burger">
+ 	       <span></span>	
+ 	       <span></span>
+ 	 	</a>
+ 	 	<div class="nav">
+ 	 		<ul>
+ 	 			<li><a href="#home">Home</a></li>
+ 	 			<li><a href="#about">About</a></li>
+ 	 			<li><a href="#service">Services</a></li>
+ 	 			<li><a href="#classes">Classes</a></li>
+ 	 			<li><a href="#schedule">Schedule</a></li>
+ 	 			<li><a href="#price">Price</a></li>
+ 	 			<li><a href="#contact">Contact</a></li>
+ 	 		</ul>
  	 	</div>
  	 </div>
  </header>
