--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                   <img src="images/price2.jpg" alt="price" />
                              </div>
                              <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="WeightGain.html" class="btn">View Pricing</a>
                              </div>
                       </div>
                 </div>
@@ -87,7 +87,7 @@
                                   <img src="images/price3.jpg" alt="price" />
                              </div>
                              <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="Bodybuilding.html" class="btn">View Pricing</a>
                              </div>
                       </div>
                 </div>
