--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                   <img src="images/price1new.jpg" alt="price" />
                              </div>
 			      <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="fatIITR.html" class="btn">View Pricing</a>
                         	 </div>
                      </div>
                 </div>
@@ -118,7 +118,7 @@
                                   <img src="images/price2.jpg" alt="price" />
                              </div>
                              <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="WeightIITR.html" class="btn">View Pricing</a>
                              </div>
                       </div>
                 </div>
@@ -128,7 +128,7 @@
                                   <img src="images/price3.jpg" alt="price" />
                              </div>
                              <div class="text">
-                                   <a href="https://i.ytimg.com/vi/eGaImwD8fPQ/maxresdefault.jpg" class="btn">View Pricing</a>
+                                   <a href="BodyIITR.html" class="btn">View Pricing</a>
                              </div>
                       </div>
                 </div>
