--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 	
  <!-- Start About/ IITR -->
   <section class="price-package" id="about">
+	   <div class="text box wow slideInLeft">
+                  <h2>Services</h2>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+               
+ 		 	  </div>
     <div class="container">
           <h2>Choose Your Goal</h2>
           <div class="content">
